fdo#46669 sw: RTF paste should not change page styles

Change-Id: Ic163a639fae9de838258b3cca9567a29ab875a35