writerfilter/source/dmapper/DomainMapper_Impl.cxx
@@ -155,7 +155,8 @@ DomainMapper_Impl::DomainMapper_Impl(
             DomainMapper& rDMapper,
             uno::Reference < uno::XComponentContext >  xContext,
             uno::Reference< lang::XComponent >  xModel,
-            SourceDocumentType eDocumentType) :
+            SourceDocumentType eDocumentType,
+            bool bIsNewDoc) :
         m_eDocumentType( eDocumentType ),
         m_rDMapper( rDMapper ),
         m_xTextDocument( xModel, uno::UNO_QUERY ),
@@ -182,7 +183,8 @@ DomainMapper_Impl::DomainMapper_Impl(
         m_bIsLastParaInSection( false ),
         m_bParaSectpr( false ),
         m_bUsingEnhancedFields( false ),
-        m_bSdt(false)
+        m_bSdt(false),
+        m_bIsNewDoc(bIsNewDoc)
 {
     appendTableManager( );
     GetBodyText();
@@ -3795,6 +3797,11 @@ sal_Int32 DomainMapper_Impl::getCurrentNumberingProperty(OUString aProp)
     }
 
     return nRet;
+}
+
+bool DomainMapper_Impl::IsNewDoc()
+{
+    return m_bIsNewDoc;
 }
 
 }}
